<resources>
    <string name="app_name">AirLines</string>
    <string name="pager_1">首页</string>
    <string name="pager_2">航班动态</string>
    <string name="pager_3">我</string>
    <string name="pager_4">更多</string>
    <string name="f_ticket_book">机票预订</string>
    <string name="f_select_seat">提前选座</string>
    <string name="f_nan_hang_holiday">南航假期</string>
    <string name="f_reboot">退改/升舱</string>
    <string name="f_my_order">我的订单</string>
    <string name="f_ticket_exchange">机票兑换</string>
    <!-- Yu*************************************************-->
    <string name="y_leave_arrival">出发/到达</string>
    <string name="y_flight_number">航班号</string>
    <string name="y_my_concern">我的关注</string>
    <string name="y_usual_airline">常用航线</string>
    <string name="y_leave_city1">出发城市</string>
    <string name="y_arrive_city1">到达城市</string>
    <string name="y_select_please">请选择</string>
    <string name="y_leave_date">出发日期</string>
    <string name="y_month">九月</string>
    <string name="y_week">周一</string>
    <string name="y_day">05</string>
    <string name="y_voice">语音</string>
    <string name="y_query">查询</string>
    <string name="y_number_cz">航班号   CZ</string>
    <string name="y_number_input">请输入航班号如:   如 3101</string>
    <string name="y_add_attention_number">添加关注航班</string>
    <string name="y_select_city">选择城市</string>



</resources>
